logs/generate_data_549397.log
Setting up environment...
Starting data generation...
  File "data_generation.py", line 20
    print(f"Error: Game map directory not found: {expanded_dir}")
                                                               ^
SyntaxError: invalid syntax
Data generation script finished.
